📝 Fix code block line wrapping in docs

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -137,3 +137,9 @@ a:hover {
 p a > code:hover {
 	color: var(--linkcolor);
 }
+
+// Code block word wrapping fix
+pre > code {
+	overflow-x: auto;
+	white-space: pre;
+}
